@@ -24,7 +24,6 @@ gdouble sp_desktop_horizontal_snap(SPDesktop const *dt, NRPoint* req);
 gdouble sp_desktop_vertical_snap(SPDesktop const *dt, NRPoint* req);
 
 /* List of points methods */
-double sp_desktop_dim_snap_list (SPDesktop const *desktop, NR::Point *p, const int length, const double dx, const int dim);
 double sp_desktop_dim_snap_list_scale (SPDesktop const *desktop, NR::Point *p, const int length, const NR::Point norm, const double sx, const int dim);
 double sp_desktop_dim_snap_list_skew (SPDesktop const *desktop, NRPoint *p, const int length, const NRPoint* norm, const double sy, const int dim);
 
@@ -32,6 +31,8 @@ double sp_desktop_vector_snap_list (SPDesktop const *desktop, NR::Point *p, cons
 
 // These little functions are only here to provide an edge between NRPoint-land and NR::Point-land.
 
+/* TODO: These are called only from one place, where both are called.  Replace with a (dx,dy)
+   version that does horizontal then vertical. */
 double sp_desktop_horizontal_snap_list (SPDesktop const *desktop, NRPoint *p, const int length, const double dx);
 double sp_desktop_vertical_snap_list (SPDesktop const *desktop, NRPoint *p, const int length, const double dx);
 
