@@ -1,5 +1,10 @@
 2004-01-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/desktop-snap.cpp: Make the `horizontal' and `vertical'
+	  global constants be static.
+	  Similarly, make functions sp_intersector_a_vector_snap,
+	  sp_desktop_dim_snap_list static.
+
 	* configure.in: Fix sigc++ checking code: add it to the existing
 	  PKG_CHECK_MODULES(INKSCAPE, ...)  list instead of modifying
 	  $CXXFLAGS,$LIBS.
